--- a/frozen-feast.html
+++ b/frozen-feast.html
@@ -109,7 +109,7 @@ Developer: Sergio Pacheco
                         <button class = "link-button" id = "seeStores">
                             See Stores
                         </button>
-                        <a href = "mailto:info@willowsreef.com?subject=Frozenfreast%20Pre%20Order" target = "_blank" class = "link-button">
+                        <a href = "mailto:info@willowsreef.com?subject=FrozenFeast%20Pre-Order" target = "_blank" class = "link-button">
                             Order via Email
                         </a>
                     </div>
