--- a/wholesale-page.html
+++ b/wholesale-page.html
@@ -50,8 +50,58 @@ Developer: Sergio Pacheco
 
             <div id = "productSection" class = "container-fluid mt-4">
                 <h2 class = "section-header">Wholesale Products</h2>
-                <div class = "row justify-content-center">
-                    &nbsp;
+                <div style = "font-weight: bold; text-align: center; margin-top: 3rem;">
+                    USA
+                </div>
+                <div class = "row justify-content-center align-items-center" style = "min-height: 10rem;">
+                    <div class = "col-12 col-lg-4 mt-3 text-center">
+                        <a href = "" target = "_blank" rel = "noopener norferrer">
+                            <img alt = "Aquarium Specialty" src = "images/png/store-logos/wholesale-logos/aqua-spec-logo.png" style = "max-width: 14rem ;">
+                        </a>
+                    </div>
+                    <div class = "col-12 col-lg-4 mt-3 text-center">
+                        <a href = "" target = "_blank" rel = "noopener norferrer">
+                            <img alt = "Gulfstream Tropical Aquarium" src = "images/png/store-logos/wholesale-logos/gulfstream-tropical-logo.png" style = "max-width: 8rem; background: #000; border-radius: 1rem;">
+                        </a>
+                    </div>
+                    <div class = "col-12 col-lg-4 mt-3 text-center">
+                        <a href = "" target = "_blank" rel = "noopener norferrer">
+                            <img alt = "Vasca Aquarium Supply" src = "images/png/store-logos/wholesale-logos/vasca-logo.png" style = "max-width: 14rem ;">
+                        </a>
+                    </div>
+                </div>
+                
+                <div style = "font-weight: bold; text-align: center; margin-top: 3rem;">
+                    India
+                </div>
+                <div class = "row justify-content-center align-items-center" style = "min-height: 10rem;">
+                    <div class = "col-12 col-lg-4 mt-3 text-center">
+                        <a href = "" target = "_blank" rel = "noopener norferrer">
+                            <img alt = "Digitech Aquarium" src = "images/png/store-logos/wholesale-logos/digitech-aquariums-logo.png" style = "max-width: 12rem ;">
+                        </a>
+                    </div>
+                </div>
+
+                <div style = "font-weight: bold; text-align: center; margin-top: 3rem;">
+                    Puerto Rico
+                </div>
+                <div class = "row justify-content-center align-items-center" style = "min-height: 10rem;">
+                    <div class = "col-12 col-lg-4 mt-3 text-center">
+                        <a href = "" target = "_blank" rel = "noopener norferrer">
+                            <img alt = "Happy Fish Food PR" src = "images/png/store-logos/wholesale-logos/happy-fish-logo.png" style = "max-width: 9rem ;">
+                        </a>
+                    </div>
+                </div>
+
+                <div style = "font-weight: bold; text-align: center; margin-top: 3rem;">
+                    Bangladesh
+                </div>
+                <div class = "row justify-content-center align-items-center" style = "min-height: 10rem;">
+                    <div class = "col-12 col-lg-4 mt-3 text-center">
+                        <a href = "" target = "_blank" rel = "noopener norferrer">
+                            <img alt = "SHOPR Aquatics" src = "images/png/store-logos/wholesale-logos/shopr-aquatics-logo.png" style = "max-width: 9rem ;">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
