--- a/wholesale-page.html
+++ b/wholesale-page.html
@@ -49,7 +49,7 @@ Developer: Sergio Pacheco
             <div id = "screenOverlay">&nbsp;</div>
 
             <div id = "productSection" class = "container-fluid mt-4">
-                <h2 class = "section-header">Wholesale Products</h2>
+                <h2 class = "section-header">Wholesale Sellers</h2>
                 <div style = "font-weight: bold; text-align: center; margin-top: 3rem;">
                     USA
                 </div>
@@ -70,7 +70,7 @@ Developer: Sergio Pacheco
                         </a>
                     </div>
                 </div>
-                
+
                 <div style = "font-weight: bold; text-align: center; margin-top: 3rem;">
                     India
                 </div>
