--- a/wholesale-page.html
+++ b/wholesale-page.html
@@ -50,7 +50,7 @@ Developer: Sergio Pacheco
 
             <div id = "productSection" class = "container-fluid mt-4">
                 <h2 class = "section-header">Wholesale Sellers</h2>
-                <div style = "font-weight: bold; text-align: center; margin-top: 3rem;">
+                <div style = "font-weight: bold; text-align: center; margin-top: 3rem; font-size: 1.5rem;">
                     USA
                 </div>
                 <div class = "row justify-content-center align-items-center" style = "min-height: 10rem;">
@@ -71,7 +71,7 @@ Developer: Sergio Pacheco
                     </div>
                 </div>
 
-                <div style = "font-weight: bold; text-align: center; margin-top: 3rem;">
+                <div style = "font-weight: bold; text-align: center; margin-top: 3rem; font-size: 1.5rem;">
                     India
                 </div>
                 <div class = "row justify-content-center align-items-center" style = "min-height: 10rem;">
@@ -82,7 +82,7 @@ Developer: Sergio Pacheco
                     </div>
                 </div>
 
-                <div style = "font-weight: bold; text-align: center; margin-top: 3rem;">
+                <div style = "font-weight: bold; text-align: center; margin-top: 3rem; font-size: 1.5rem;">
                     Puerto Rico
                 </div>
                 <div class = "row justify-content-center align-items-center" style = "min-height: 10rem;">
@@ -93,7 +93,7 @@ Developer: Sergio Pacheco
                     </div>
                 </div>
 
-                <div style = "font-weight: bold; text-align: center; margin-top: 3rem;">
+                <div style = "font-weight: bold; text-align: center; margin-top: 3rem; font-size: 1.5rem;">
                     Bangladesh
                 </div>
                 <div class = "row justify-content-center align-items-center" style = "min-height: 10rem;">
