--- a/wholesale-page.html
+++ b/wholesale-page.html
@@ -7,7 +7,7 @@ Developer: Sergio Pacheco
 <html lang = "en">
     <head>
         <meta charset = "UTF-8">
-        <title>Willow's Reef | Products</title>
+        <title>Willow's Reef | Wholesale</title>
         <link rel = "shortcut icon" type = "image/ico" href = "images/ico/favicon.ico"/>
         <meta name = "viewport" content = "width = device-width, initial-scale = 1">
         
