--- a/wholesale-page.html
+++ b/wholesale-page.html
@@ -53,18 +53,18 @@ Developer: Sergio Pacheco
                 <div style = "font-weight: bold; text-align: center; margin-top: 3rem; font-size: 1.5rem;">
                     USA
                 </div>
-                <div class = "row justify-content-center align-items-center" style = "min-height: 10rem; border: 0.1rem solid #010048; padding: 1rem 0; border-radius: 1rem;">
-                    <div class = "col-12 col-lg-4 mt-3 mb-3 text-center">
+                <div class = "row justify-content-center align-items-center" style = "min-height: 10rem;">
+                    <div class = "col-12 col-lg-4 mt-3 text-center">
                         <a href = "" target = "_blank" rel = "noopener norferrer">
                             <img alt = "Aquarium Specialty" src = "images/png/store-logos/wholesale-logos/aqua-spec-logo.png" style = "max-width: 14rem ;">
                         </a>
                     </div>
-                    <div class = "col-12 col-lg-4 mt-3 mb-3 text-center">
+                    <div class = "col-12 col-lg-4 mt-3 text-center">
                         <a href = "" target = "_blank" rel = "noopener norferrer">
                             <img alt = "Gulfstream Tropical Aquarium" src = "images/png/store-logos/wholesale-logos/gulfstream-tropical-logo.png" style = "max-width: 8rem; background: #000; border-radius: 1rem;">
                         </a>
                     </div>
-                    <div class = "col-12 col-lg-4 mt-3 mb-3 text-center">
+                    <div class = "col-12 col-lg-4 mt-3 text-center">
                         <a href = "" target = "_blank" rel = "noopener norferrer">
                             <img alt = "Vasca Aquarium Supply" src = "images/png/store-logos/wholesale-logos/vasca-logo.png" style = "max-width: 14rem ;">
                         </a>
@@ -74,8 +74,8 @@ Developer: Sergio Pacheco
                 <div style = "font-weight: bold; text-align: center; margin-top: 3rem; font-size: 1.5rem;">
                     India
                 </div>
-                <div class = "row justify-content-center align-items-center" style = "min-height: 10rem; border: 0.1rem solid #010048; padding: 1rem 0; border-radius: 1rem;">
-                    <div class = "col-12 col-lg-4 mt-3 mb-3 text-center">
+                <div class = "row justify-content-center align-items-center" style = "min-height: 10rem;">
+                    <div class = "col-12 col-lg-4 mt-3 text-center">
                         <a href = "" target = "_blank" rel = "noopener norferrer">
                             <img alt = "Digitech Aquarium" src = "images/png/store-logos/wholesale-logos/digitech-aquariums-logo.png" style = "max-width: 12rem ;">
                         </a>
@@ -85,8 +85,8 @@ Developer: Sergio Pacheco
                 <div style = "font-weight: bold; text-align: center; margin-top: 3rem; font-size: 1.5rem;">
                     Puerto Rico
                 </div>
-                <div class = "row justify-content-center align-items-center" style = "min-height: 10rem; border: 0.1rem solid #010048; padding: 1rem 0; border-radius: 1rem;">
-                    <div class = "col-12 col-lg-4 mt-3 mb-3 text-center">
+                <div class = "row justify-content-center align-items-center" style = "min-height: 10rem;">
+                    <div class = "col-12 col-lg-4 mt-3 text-center">
                         <a href = "" target = "_blank" rel = "noopener norferrer">
                             <img alt = "Happy Fish Food PR" src = "images/png/store-logos/wholesale-logos/happy-fish-logo.png" style = "max-width: 9rem ;">
                         </a>
@@ -96,8 +96,8 @@ Developer: Sergio Pacheco
                 <div style = "font-weight: bold; text-align: center; margin-top: 3rem; font-size: 1.5rem;">
                     Bangladesh
                 </div>
-                <div class = "row justify-content-center align-items-center" style = "min-height: 10rem; border: 0.1rem solid #010048; padding: 1rem 0; border-radius: 1rem;">
-                    <div class = "col-12 col-lg-4 mt-3 mb-3 text-center">
+                <div class = "row justify-content-center align-items-center" style = "min-height: 10rem;">
+                    <div class = "col-12 col-lg-4 mt-3 text-center">
                         <a href = "" target = "_blank" rel = "noopener norferrer">
                             <img alt = "SHOPR Aquatics" src = "images/png/store-logos/wholesale-logos/shopr-aquatics-logo.png" style = "max-width: 9rem ;">
                         </a>
