--- a/wholesale-page.html
+++ b/wholesale-page.html
@@ -50,10 +50,10 @@ Developer: Sergio Pacheco
 
             <div id = "productSection" class = "container-fluid mt-4">
                 <h2 class = "section-header">Wholesale Sellers</h2>
-                <div style = "font-weight: bold; text-align: center; margin-top: 3rem; font-size: 1.5rem;">
+                <div style = "font-weight: bold; text-align: center; margin-top: 3rem; font-size: 1.5rem; border-bottom: 0.1rem solid #010048;">
                     USA
                 </div>
-                <div class = "row justify-content-center align-items-center" style = "min-height: 10rem;">
+                <div class = "row justify-content-center align-items-center" style = "min-height: 10rem; margin-bottom: 5rem;">
                     <div class = "col-12 col-lg-4 mt-3 text-center">
                         <a href = "" target = "_blank" rel = "noopener norferrer">
                             <img alt = "Aquarium Specialty" src = "images/png/store-logos/wholesale-logos/aqua-spec-logo.png" style = "max-width: 14rem ;">
@@ -71,10 +71,10 @@ Developer: Sergio Pacheco
                     </div>
                 </div>
 
-                <div style = "font-weight: bold; text-align: center; margin-top: 3rem; font-size: 1.5rem;">
+                <div style = "font-weight: bold; text-align: center; margin-top: 3rem; font-size: 1.5rem; border-bottom: 0.1rem solid #010048; text-transform: uppercase;">
                     India
                 </div>
-                <div class = "row justify-content-center align-items-center" style = "min-height: 10rem;">
+                <div class = "row justify-content-center align-items-center" style = "min-height: 10rem; margin-bottom: 5rem;">
                     <div class = "col-12 col-lg-4 mt-3 text-center">
                         <a href = "" target = "_blank" rel = "noopener norferrer">
                             <img alt = "Digitech Aquarium" src = "images/png/store-logos/wholesale-logos/digitech-aquariums-logo.png" style = "max-width: 12rem ;">
@@ -82,10 +82,10 @@ Developer: Sergio Pacheco
                     </div>
                 </div>
 
-                <div style = "font-weight: bold; text-align: center; margin-top: 3rem; font-size: 1.5rem;">
+                <div style = "font-weight: bold; text-align: center; margin-top: 3rem; font-size: 1.5rem; border-bottom: 0.1rem solid #010048; text-transform: uppercase;">
                     Puerto Rico
                 </div>
-                <div class = "row justify-content-center align-items-center" style = "min-height: 10rem;">
+                <div class = "row justify-content-center align-items-center" style = "min-height: 10rem; margin-bottom: 5rem;">
                     <div class = "col-12 col-lg-4 mt-3 text-center">
                         <a href = "" target = "_blank" rel = "noopener norferrer">
                             <img alt = "Happy Fish Food PR" src = "images/png/store-logos/wholesale-logos/happy-fish-logo.png" style = "max-width: 9rem ;">
@@ -93,10 +93,10 @@ Developer: Sergio Pacheco
                     </div>
                 </div>
 
-                <div style = "font-weight: bold; text-align: center; margin-top: 3rem; font-size: 1.5rem;">
+                <div style = "font-weight: bold; text-align: center; margin-top: 3rem; font-size: 1.5rem; border-bottom: 0.1rem solid #010048; text-transform: uppercase;">
                     Bangladesh
                 </div>
-                <div class = "row justify-content-center align-items-center" style = "min-height: 10rem;">
+                <div class = "row justify-content-center align-items-center" style = "min-height: 10rem; margin-bottom: 5rem;">
                     <div class = "col-12 col-lg-4 mt-3 text-center">
                         <a href = "" target = "_blank" rel = "noopener norferrer">
                             <img alt = "SHOPR Aquatics" src = "images/png/store-logos/wholesale-logos/shopr-aquatics-logo.png" style = "max-width: 9rem ;">
