--- a/wholesale-page.html
+++ b/wholesale-page.html
@@ -50,7 +50,8 @@ Developer: Sergio Pacheco
 
             <div id = "productSection" class = "container-fluid mt-4">
                 <h2 class = "section-header">Wholesale Sellers</h2>
-                <div style = "font-weight: bold; text-align: center; margin-top: 3rem; font-size: 1.5rem; border-bottom: 0.1rem solid #010048;">
+                <div style = "font-weight: bold; text-align: center; margin-top: 3rem; font-size: 1.5rem; border-bottom: 0.1rem solid;">
+                    <span><img alt = "US Flag" src = "images/svg/united-states-flag.svg" style = "max-width: 1.5rem; position: relative; top: -0.1rem;"></span>
                     USA
                 </div>
                 <div class = "row justify-content-center align-items-center" style = "min-height: 10rem; margin-bottom: 5rem;">
@@ -71,7 +72,8 @@ Developer: Sergio Pacheco
                     </div>
                 </div>
 
-                <div style = "font-weight: bold; text-align: center; margin-top: 3rem; font-size: 1.5rem; border-bottom: 0.1rem solid #010048; text-transform: uppercase;">
+                <div style = "font-weight: bold; text-align: center; margin-top: 3rem; font-size: 1.5rem; border-bottom: 0.1rem solid; text-transform: uppercase;">
+                    <span><img alt = "India Flag" src = "images/svg/india-flag.svg" style = "max-width: 1.5rem; position: relative; top: -0.1rem;"></span>
                     India
                 </div>
                 <div class = "row justify-content-center align-items-center" style = "min-height: 10rem; margin-bottom: 5rem;">
@@ -82,7 +84,8 @@ Developer: Sergio Pacheco
                     </div>
                 </div>
 
-                <div style = "font-weight: bold; text-align: center; margin-top: 3rem; font-size: 1.5rem; border-bottom: 0.1rem solid #010048; text-transform: uppercase;">
+                <div style = "font-weight: bold; text-align: center; margin-top: 3rem; font-size: 1.5rem; border-bottom: 0.1rem solid; text-transform: uppercase;">
+                    <span><img alt = "Puerto Rico Flag" src = "images/svg/puerto-rico-flag.svg" style = "max-width: 1.5rem; position: relative; top: -0.1rem;"></span>
                     Puerto Rico
                 </div>
                 <div class = "row justify-content-center align-items-center" style = "min-height: 10rem; margin-bottom: 5rem;">
@@ -93,7 +96,8 @@ Developer: Sergio Pacheco
                     </div>
                 </div>
 
-                <div style = "font-weight: bold; text-align: center; margin-top: 3rem; font-size: 1.5rem; border-bottom: 0.1rem solid #010048; text-transform: uppercase;">
+                <div style = "font-weight: bold; text-align: center; margin-top: 3rem; font-size: 1.5rem; border-bottom: 0.1rem solid; text-transform: uppercase;">
+                    <span><img alt = "Bangladesh Flag" src = "images/svg/bangladesh-flag.svg" style = "max-width: 1.5rem; position: relative; top: -0.1rem;"></span>
                     Bangladesh
                 </div>
                 <div class = "row justify-content-center align-items-center" style = "min-height: 10rem; margin-bottom: 5rem;">
